Deploy only one docker image instead of two
