# apps/app/src/api/models/index.ts
@@ -6,7 +6,6 @@
  */
 
 export * from './applicationHealthResponse';
-export * from './applicationVersionResponse';
 export * from './createContractorCommand';
 export * from './createContractorResponse';
 export * from './createInvoiceCommand';
